--- a/apps/userprofile/templates/core/myaccount.html
+++ b/apps/userprofile/templates/core/myaccount.html
@@ -1,63 +1,36 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static '/scss/userprofile/myaccount.css' %}" type="text/css">
 
-    <h1 class="title">My account</h1>
+<div class="myaccount">
+    <div class="account-card">
+        <h1 class="heading">Min bruker</h1>
 
-    <a href="{% url 'logout' %}" class="button is-danger">Log out</a>
-
-    <hr>
-
-    <h2 class="subtitle">Account information</h2>
-
-    <p><strong>Name: </strong>{{ request.user.get_full_name }}</p>
-    <p><strong>E-mail: </strong>{{ request.user.email }}</p>
-    <p><strong>Address: </strong>{{ request.user.userprofile.address }}</p>
-    <p><strong>Zip and place: </strong>{{ request.user.userprofile.zipcode }} {{ request.user.userprofile.place }}</p>
-    <p><strong>Phone: </strong>{{ request.user.userprofile.phone }}</p>
-
-    <hr>
-
-    <h2 class="subtitle">My orders</h2>
-
-    {% for order in request.user.orders.all %}
-        <article class="message is-light">
-            <div class="message-header">
-                <p>{{ order.created_at }}</p>
-                <p><strong>Status: </strong>{{ order.status }}</p>
-            </div>
-
-            <div class="message-body">
-                <table class="table is-striped is-fullwidth">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Quantity</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        {% for item in order.items.all %}
-                            <tr>
-                                <td>{{ item.product.name }}</td>
-                                <td>{{ item.quantity }}</td>
-                                <td>{{ item.price }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-
-                    <tfoot>
-                        <tr>
-                            <td>Total</td>
-                            <td>{{ order.get_total_quantity }}</td>
-                            <td>{{ order.paid_amount }}</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-        </article>
-    {% empty %}
-        <p>You don't have any order yet...</p>
-    {% endfor %}
+        <a href="{% url 'logout' %}">Logg ut</a>
+    
+        <hr>
+    
+        <h2 class="heading">Dine opplysninger</h2>
+    
+        <p><strong>Name: </strong>{{ request.user.get_full_name }}</p>
+        <p><strong>E-mail: </strong>{{ request.user.email }}</p>
+        <p><strong>Address: </strong>{{ request.user.userprofile.address }}</p>
+        <p><strong>Zip and place: </strong>{{ request.user.userprofile.zipcode }} {{ request.user.userprofile.place }}</p>
+        <p><strong>Phone: </strong>{{ request.user.userprofile.phone }}</p>
+    
+        <hr>
+    
+        <h2 class="heading">Mine bestillinger</h2>
+    
+        {% for order in request.user.orders.all %}
+        du har en <br>
+        betalt: <br>
+           {{ order.paid }}
+        {% empty %}
+            <p>You don't have any order yet...</p>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
