--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: auto;
   padding: 15px;
-  background: #fafafa;
+  background: #fdfdfd;
   position: relative;
   padding-bottom: 35px;
   padding-top: 20px;
