--- a/static/scss/userprofile/myaccount.css
+++ b/static/scss/userprofile/myaccount.css
@@ -1,1 +1,29 @@
-/* No CSS *//*# sourceMappingURL=myaccount.css.map */
+.myaccount {
+  width: 100%;
+  height: auto;
+  background: transparent;
+  -webkit-transform: translateY(113px);
+          transform: translateY(113px);
+  margin-bottom: 170px;
+}
+
+.myaccount .account-card {
+  margin: 0 auto;
+  text-align: left;
+  background: transparent;
+  width: 93%;
+  max-width: 700px;
+  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+          box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+  padding: 20px;
+  border-radius: 7px;
+}
+
+.myaccount .account-card .heading {
+  color: #183B56;
+  font-size: 22px;
+  font-weight: 800;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
+}
+/*# sourceMappingURL=myaccount.css.map */
