--- a/apps/core/templates/pages/kundeservice/contact.html
+++ b/apps/core/templates/pages/kundeservice/contact.html
@@ -7,35 +7,30 @@
 
 
 
-<div class="cover" id="cover">
-    <img src="{% static '/images/covers/cover4.jpg' %}" alt="main cover landig page">
-    <div class="content" id="coverContent">
-       <div class="text">
-          <h1>Lurer du på noe?</h1>
-          <p>Send oss en epost under</p>
+<div class="contact-us">
+   <form action="" method="POST">
+      <h1 class="heading">Kontakter oss</h1>
+       {% csrf_token %}
+       <br>
+       <div class="contact-form-inputs">
+          <label for="navn">Navn</label>
+          <br>
+          <input type="text" name="navn" required oninvalid="this.setCustomValidity('Værsåsnill, skriv inn navn')" oninput="this.setCustomValidity('')">
+          <br>
+          <br>
+          <label for="email">Epost</label>
+          <br>
+          <input type="email" name="email" required oninvalid="this.setCustomValidity('Værsåsnill, skirv inn epost')" oninput="this.setCustomValidity('')">
+          <br>
+          <br>
+          <label for="message">Hvordan kan vi hjelpe?</label>
+          <br>
+          <textarea name="message" required oninvalid="this.setCustomValidity('Værsåsnill, skriv inn beskjed')" oninput="this.setCustomValidity('')"></textarea>
+         </div>
+       <div class="form-actions">
+         <button type="submit" name="contact" value="contact">Send epost</button>
        </div>
-    </div>
- </div>
- 
-  <div class="contact-page">
-      <form action="" method="POST">
-          {% csrf_token %}
-          <br>
-          <label for="navn" class="form-tag-navn tag" id="contactNameLabel">Navn</label>
-          <input type="text" name="navn" onclick="contactName()" required oninvalid="this.setCustomValidity('Værsåsnill, skriv inn navn')" oninput="this.setCustomValidity('')">
-          <br>
-          <br>
-          <label for="email" class="form-tag-email tag" id="contactEmailLabel">Epost</label>
-          <input type="email" name="email" onclick="contactEmail()" required oninvalid="this.setCustomValidity('Værsåsnill, skirv inn epost')" oninput="this.setCustomValidity('')">
-          <br>
-          <br>
-          <label for="message" class="form-tag-message tag" id="contactMessageLabel">Hva ønsker du fortelle oss?</label>
-          <textarea name="message" cols="30" rows="10" onclick="contactMessage()" required oninvalid="this.setCustomValidity('Værsåsnill, skriv inn beskjed')" oninput="this.setCustomValidity('')"></textarea>
-          <div class="form-actions">
-              <button class="hover" type="submit" name="contact" value="contact">Send</button>
-          </div>
-        </form>
-     </div>
- 
+     </form>
+  </div>
 
 {% endblock %}
