--- a/apps/userprofile/templates/core/login.html
+++ b/apps/userprofile/templates/core/login.html
@@ -3,28 +3,37 @@
     
 
 {% block content %}
-
+<link rel="stylesheet" href="{% static '/scss/userprofile/login.css' %}" type="text/css">
 
 
 <div class="login">
-     <!-- USER LOGIN -->
-        <form id="loginForm" method="post">
-            {% csrf_token %}
-            <div class="part-one">
-                <br>
-                <label for="username" class="form-tag-username tag">Brukernavn</label>
-                <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill skriv inn brukernavnet')" oninput="this.setCustomValidity('')">
-                <br>
-                <br>
-                <label for="password" class="form-tag-password tag">Passord</label>
-                <input type="password" id="password" name="password" required oninvalid="this.setCustomValidity('Skriv inn passordet')" oninput="this.setCustomValidity('')">
-                <div id="signUpFormErrors">{{ form.username.errors }}</div>
-                <br>
-                <div id="signUpFormErrors">{{ form.password.errors }}</div>
-            </div>
-            <button type="submit" class="form-sumbit">Logg inn</button>
-        </form>
-    <h1>Eller <a href="/lag-bruker">lag bruker</a></h1>
+    <!-- USER LOGIN -->
+    <form id="loginForm" method="post">
+        <h1 class="heading">Logg inn</h1>
+        {% csrf_token %}
+        {{form.errors}}
+        <br>
+        <!-- USER LOGIN FORM INPUTS -->
+        <div class="login-form-inputs">
+            <!-- NAME -->
+            <label for="username">Navn</label>
+            <br>
+            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+            <br>
+            <br>
+            <!-- PASSWORD -->
+            <label for="password">Passord</label>
+            <br>
+            <input type="password" id="password" name="password" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+            <br>
+        </div> 
+        <div class="form-actions">
+            <button onclick="orderLoading()" name="order" value="order" type='submit'>Logg inn</button>
+        </div>
+        <br>
+        <br>
+        <h1 class="or-signup">Eller <a href="/lag-bruker">lag bruker</a></h1>
+    </form>
 </div>
 
 {% endblock %}
