--- a/apps/userprofile/templates/core/signup.html
+++ b/apps/userprofile/templates/core/signup.html
@@ -3,41 +3,59 @@
     
 
 {% block content %}
-<div class="signup">
+<link rel="stylesheet" href="{% static '/scss/userprofile/signup.css' %}" type="text/css">
 
+
+<div class="signup">
     <form id="signUpForm" method="post" autocomplete="off">      
+        <h1 class="heading">Lag bruker</h1>
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{form.errors}}
-        <div class="part-one">
+        <br>
+        <!-- USER SIGNUP FORM INPUTS -->
+        <div class="signup-form-inputs">
+            <!-- NAME -->
+            <label for="username">Navn</label>
             <br>
-            <label for="username" class="form-tag-username tag">Brukernavn</label>
-            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill velg en brukernavn')" oninput="this.setCustomValidity('')">
+            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
             <br>
+            <!-- FIRST NAME -->
             <label for="first_name" class="form-tag-first_name tag">Fornavn</label>
+            <br>
             <input type="text" id="first_name" name="first_name" required oninvalid="this.setCustomValidity('Fornavn kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
             <br>
+            <!-- LAST NAME -->
             <label for="last_name" class="form-tag-last_name tag">Etternavn</label>
+            <br>
             <input type="text" id="last_name" name="last_name" required oninvalid="this.setCustomValidity('Etternavn kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
             <br>
+            <!-- EMAIL -->
             <label for="email" class="form-tag-email tag">Epost</label>
+            <br>
             <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Skriv din epost her')" oninput="this.setCustomValidity('')">
             <br>
             <br>
+            <!-- PASSWORD -->
             <label for="password1" class="form-tag-password1 tag">Passord</label>
+            <br>
             <input type="password" autocomplete="new-password" id="password1" name="password1" required oninvalid="this.setCustomValidity('Velg et passord')" oninput="this.setCustomValidity('')">
             <br>
             <br>
+            <!-- REPEAT PASSWORD -->
             <label for="password2" class="form-tag-password2 tag">Gjenta passord</label>
+            <br>
             <input type="password" id="password2" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
         </div> 
-        <button type="submit" class="form-sumbit">Logg inn</button>
+        <div class="form-actions">
+            <button onclick="orderLoading()" name="order" value="order" type='submit'>Logg inn</button>
+        </div>
+        <br>
+        <br>
+        <h1 class="or-login">Eller <a href="/logg-inn">logg inn</a></h1>
     </form>
-    <h1>Eller <a href="/logg-inn">logg inn</a></h1>
 </div>
 {% endblock %}
