--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -1,80 +1,68 @@
+$loader: rgb(80, 104, 180);
+
 // STANDARD PHONE
 .login{
-    background: #829efc;
     width: 100%;
-    height: 500px;
-    h1{
-        transform: translateY(150px) translateX(10px);
-        font-size: 16px;
-        color: white;
-        padding: 5px;
-        position: absolute;
-        a{
-            color: white;
-            text-decoration: underline;
+    height: auto;
+    background: transparent;
+    transform: translateY(113px);
+    margin-bottom: 170px;
+    // LOGIN FORM
+    form{
+      margin: 0 auto;
+      text-align: left;
+      background: transparent;
+      width: 93%;
+      max-width: 700px;
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+      padding: 20px;
+      border-radius: 7px;
+        // LOGIN HEADING
+        .heading{
+          color: #183B56;
+          font-size: 22px;
+          font-weight: 800;
+          text-shadow: 1px 0 #183B56;
+          letter-spacing:1px; 
         }
-    }
-    #loginForm{
-        text-align: left;
-        width: 100%;
-        display: block;
-        transform: translateY(100px);
-        .part-one{
-            background: #bdcdff;
-            width: 100%;
-            .form-tag-username{
-                font-size: 15px;
-                color: rgb(48, 71, 146);
-                background: #bdcdff;
-                width: max-content;
-                padding: 0 2px;
-                position: absolute;
-                left: 20px;
-                top: 13px;
-                z-index: 10;
-                border-radius: 5px;
-            }
-            .form-tag-password{
-                font-size: 15px;
-                color: rgb(48, 71, 146);
-                background: #bdcdff;
-                width: max-content;
-                padding: 0 2px;
-                position: absolute;
-                left: 20px;
-                top: 78px;
-                z-index: 10;
-                border-radius: 5px;
-            }
-            input{
-                width: 95%;
-                border: 2px solid rgb(60, 84, 160);
-                border-radius: 4px;
-                padding: 8px;
-                outline: none;
-                font-size: 15px;    
-                position: relative; 
-                left: 50%;
-                transform: translateX(-50%);
-                background: white;
-            }
-        }
-        .form-sumbit{
+        .login-form-inputs{
+          label{
+            color: #183B56;
+            font-size: 15px;
+            font-weight: 800;
+          }
+          input{
+            padding: 5px;
             border-radius: 4px;
-            width: 170px;
+            border: 2px solid #0089f91f;
+            outline: none;
+            color: #183B56;
+            font-size: 13px;
+            width: 82%;
+            max-width: 500px;
+            font-weight: 600;
+            height: 45px;
+          }
+        }
+        // LOGIN FORM ACTIONS
+        .form-actions{
+          margin-top: 23px;
+          button{
+            border-radius: 4px;
+            width: 200px;
             font-size: 16px;
             padding: 10px;
             transition: all .2s ease-in-out;
-            color: rgb(10, 10, 10);
+            color: white;
             outline: none;
-            background: white;  
-            box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
-            border: 2px solid transparent;  
-            transform: translateY(15px) translateX(10px);
-            &:hover{
-              background: white;
-              color: black;
-            }
+            border: none;
+            background: #0088F9;      
           }
-    }
+        }
+        .or-signup{
+            font-size: 13px;
+            color: #183B56;
+            font-weight: 800;
+        }
+      }
 }
