--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -1,159 +1,71 @@
 .signup {
-  background: #829efc;
   width: 100%;
-  height: 700px;
+  height: auto;
+  background: transparent;
+  -webkit-transform: translateY(113px);
+          transform: translateY(113px);
+  margin-bottom: 170px;
 }
 
-.signup h1 {
-  -webkit-transform: translateY(150px) translateX(10px);
-          transform: translateY(150px) translateX(10px);
-  font-size: 16px;
-  color: white;
-  padding: 5px;
-  position: absolute;
-}
-
-.signup h1 a {
-  color: white;
-  text-decoration: underline;
-}
-
-.signup #signUpForm {
+.signup form {
+  margin: 0 auto;
   text-align: left;
-  width: 100%;
-  display: block;
-  -webkit-transform: translateY(100px);
-          transform: translateY(100px);
+  background: transparent;
+  width: 93%;
+  max-width: 700px;
+  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+          box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+  padding: 20px;
+  border-radius: 7px;
 }
 
-.signup #signUpForm .part-one {
-  background: #bdcdff;
-  width: 100%;
+.signup form .heading {
+  color: #183B56;
+  font-size: 22px;
+  font-weight: 800;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
 }
 
-.signup #signUpForm .part-one .form-tag-username {
+.signup form .signup-form-inputs label {
+  color: #183B56;
   font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 13px;
+  font-weight: 800;
 }
 
-.signup #signUpForm .part-one .form-tag-first_name {
-  font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 78px;
-}
-
-.signup #signUpForm .part-one .form-tag-last_name {
-  font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 146px;
-}
-
-.signup #signUpForm .part-one .form-tag-email {
-  font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 213px;
-}
-
-.signup #signUpForm .part-one .form-tag-password1 {
-  font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 280px;
-}
-
-.signup #signUpForm .part-one .form-tag-password2 {
-  font-size: 15px;
-  color: #304792;
-  background: #bdcdff;
-  z-index: 10;
-  border-radius: 5px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0 2px;
-  position: absolute;
-  left: 20px;
-  top: 345px;
-}
-
-.signup #signUpForm .part-one input {
-  width: 95%;
-  border: 2px solid #3c54a0;
+.signup form .signup-form-inputs input {
+  padding: 5px;
   border-radius: 4px;
-  padding: 8px;
+  border: 2px solid #0089f91f;
   outline: none;
-  font-size: 15px;
-  position: relative;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background: white;
+  color: #183B56;
+  font-size: 13px;
+  width: 82%;
+  max-width: 500px;
+  font-weight: 600;
+  height: 45px;
 }
 
-.signup #signUpForm .form-sumbit {
+.signup form .form-actions {
+  margin-top: 23px;
+}
+
+.signup form .form-actions button {
   border-radius: 4px;
-  width: 170px;
+  width: 200px;
   font-size: 16px;
   padding: 10px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  color: #0a0a0a;
+  color: white;
   outline: none;
-  background: white;
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
-  -webkit-transform: translateY(15px) translateX(10px);
-          transform: translateY(15px) translateX(10px);
+  border: none;
+  background: #0088F9;
 }
 
-.signup #signUpForm .form-sumbit:hover {
-  background: white;
-  color: black;
+.signup form .or-login {
+  font-size: 13px;
+  color: #183B56;
+  font-weight: 800;
 }
 /*# sourceMappingURL=signup.css.map */
